# framebot

./: CMakeLists.txt
examples/: CMakeLists.txt  echo.c  inline_bot.c
include/framebot/: framebot.h  json.h  memory.h  network.h  objects.h  payments.h  util.h
src/: CMakeLists.txt  framebot.c  json.c  memory.c  network.c  objects.c  payments.c  util.c
test/: CMakeLists.txt  test_chat.c  test_file.c  test_payments.c  test_sendaudio.c  test_senddocument.c  test_sendmediagroup.c  test_sendmessage.c  test_sendphotos.c  test_sendpoll.c  test_sendvideo.c  test_sendvideonote.c  test_sendvoice.c  test_update.c  test_userprofilephotos.c
